[workspace]
resolver = "2"
members = ["args", "cli", "rika"]

[workspace.package]
authors = ["Kari <evergreenkary@gmail.com>"]
description = "A Starknet toolkit."
edition = "2021"
repository = "https://github.com/kariy/rika-chan"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
rika-args = { path = "args" }
rika = { path = "rika" }

chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive", "env"] }
clap_complete = "4.1.0"
eyre = "0.6.8"
hex = "0.4.3"
reqwest = { version = "0.11.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
starknet = "0.8.0"
serde_json = "1.0.85"

async-trait = "0.1.60"
thiserror = "1.0.40"
shellexpand = "3.0.0"
