[workspace]
members = [ "args", "rika" ]
resolver = "2"

[workspace.package]
authors = [ "Kari <evergreenkary@gmail.com>" ]
description = "A Starknet toolkit."
edition = "2021"
repository = "https://github.com/kariy/rika-chan"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
rika = { path = "rika" }
rika-args = { path = "args" }

chrono = "0.4.23"
clap = { version = "4.1.8", features = [ "derive", "env" ] }
clap_complete = "4.1.0"
eyre = "0.6.8"
hex = "0.4.3"
reqwest = { version = "0.11.12", features = [ "json", "rustls-tls" ], default-features = false }
serde_json = "1.0.85"
starknet = "0.8.0"
shellexpand = "3.1.0"
thiserror = "1.0.56"
