[workspace]
members = [
    "bin",
    "crates/args",
    "crates/context-macro",
    "crates/ops",
    "crates/rika",
    "crates/waiter",
]
resolver = "2"

[workspace.package]
authors = [ "Kari <evergreenkary@gmail.com>" ]
description = "A Starknet toolkit."
edition = "2021"
repository = "https://github.com/kariy/rika-chan"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
rika-args = { path = "crates/args" }
rika-ops = { path = "crates/ops" }

chrono = "0.4.23"
clap = { version = "4.1.8", features = [ "derive", "env" ] }
clap_complete = "4.1.0"
colored_json = "4.1.0"
eyre = "0.6.8"
hex = "0.4.3"
reqwest = { version = "0.12.0", features = [ "json", "rustls-tls" ], default-features = false }
serde_json = "1.0.85"
shellexpand = "3.1.0"
similar-asserts = "1.5.0"
starknet = "0.9.0"
thiserror = "1.0.56"

# Ref https://docs.rs/color-eyre/0.6.3/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3

[profile.maxperf]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"
