[package]
edition = "2021"
name = "rika-args"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
clap_complete.workspace = true
dunce = "1.0.3"
eyre.workspace = true
hex.workspace = true
home = "0.5.4"
inquire = "0.6.2"
rand = "0.8.5"
reqwest.workspace = true
serde = "1.0.145"
serde_json.workspace = true
shellexpand.workspace = true
starknet-keystore = { git = "https://github.com/kariy/starknet-keystore-rs" }
starknet.workspace = true
thiserror.workspace = true
walkdir = "2.3.2"
