[package]
name = "rika-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rika-args.workspace = true
rika.workspace = true

clap.workspace = true
clap_complete.workspace = true
chrono.workspace = true
eyre.workspace = true
starknet.workspace = true
tokio = { version = "1.24.2", features = ["full"] }

[[bin]]
name = "rika"
path = "src/main.rs"
