[package]
name = "rika"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-lang-starknet = "2.5.3"
crypto-bigint = "0.5.3"
chrono.workspace = true
comfy-table = "6.1.4"
eyre.workspace = true
hex.workspace = true
starknet.workspace = true
serde_json.workspace = true
reqwest.workspace = true
shellexpand.workspace = true
