[package]
edition.workspace = true
name = "probe-args"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-fmt.workspace = true

chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
color-eyre.workspace = true
colored_json.workspace = true
comfy-table = "6.1.4"
dunce = "1.0.3"
home = "0.5.4"
inquire = "0.6.2"
rand = "0.8.5"
reqwest.workspace = true
serde = "1.0.145"
serde_json.workspace = true
shellexpand.workspace = true
starknet.workspace = true
starknet-keystore = { git = "https://github.com/kariy/starknet-keystore-rs" }
strum = { version = "0.26", features = [ "derive" ] }
thiserror.workspace = true
walkdir = "2.3.2"

[dev-dependencies]
similar-asserts.workspace = true
