[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
name = "rika-fmt"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
prettytable-rs = "0.10.0"
starknet.workspace = true
