[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
name = "probe-fmt"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
bigdecimal = "0.4.3"
chrono.workspace = true
prettytable-rs = "0.10.0"
starknet.workspace = true
