[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
name = "rika-ops"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
reqwest = { workspace = true, features = [ "rustls-tls" ] }
rika-args.workspace = true
serde = "1.0.197"
serde_json.workspace = true
starknet.workspace = true
tokio = { version = "1.37.0", features = [ "full" ] }

[dev-dependencies]
similar-asserts.workspace = true
