[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
name = "rika-ops"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.7.0"
bigdecimal = "0.4.3"
colored_json.workspace = true
eyre.workspace = true
reqwest = { workspace = true, features = [ "rustls-tls" ] }
rika-args.workspace = true
serde = "1.0.197"
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio = { version = "1.37.0", features = [ "full" ] }

[dev-dependencies]
similar-asserts.workspace = true
